modules/vpc/route_associassion.tf
//Associate Route Table for Public Subnets
resource "aws_route_table_association" "public" {
  count          = var.vpc_subnet_count
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

//Associate Route Table for Private Subnets
resource "aws_route_table_association" "private" {
  count          = var.vpc_subnet_count
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
